--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
+    "method-override": "^2.3.5",
     "oauth": "^0.9.14",
     "request": "^2.65.0"
   }
