--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "method-override": "^2.3.5",
     "oauth": "^0.9.14",
     "request": "^2.65.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-sass": "^2.1.0",
+    "gulp-shell": "^0.5.1"
   }
 }
