--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "5.0.0",
+    "npm": "3.6.6"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Anichale/gist-manager.git"
